@@ -26,12 +26,12 @@ print "Time wheretrue carray --> %.3f" % (time()-t0)
 t0 = time()
 iac = ca.arange(int(N), cparams=ca.cparams(clevel))
 ac = ca.eval("a>T", cparams=ca.cparams(clevel))
-sac3 = [r for r in iac.where(ac, skip=ac.sum()-1)][0]
+sac3 = [r for r in iac.where(ac, skip=-1)][0]
 print "Time where carray, skip --> %.3f" % (time()-t0)
 
 t0 = time()
 ac = ca.eval("a>T", cparams=ca.cparams(clevel))
-sac2 = [r for r in ac.wheretrue(skip=ac.sum()-1)][0]
+sac2 = [r for r in ac.wheretrue(skip=-1)][0]
 print "Time wheretrue carray, skip --> %.3f" % (time()-t0)
 
 print "sa, sac, sac1, sca2, sac3-->", sa, sac1, sac, sac2, sac3
